k8s/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio
  labels:
    projeto: portfolio-pessoal
