k8s/manifests/02-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-db
  namespace: portfolio
  labels:
    app: portfolio-db
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: portfolio-db
  template:
    metadata:
      labels:
        app: portfolio-db
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
              subPath: postgres   # evita erro do Postgres com pasta "lost+found" em alguns provisionadores
            - name: db-init
              mountPath: /docker-entrypoint-initdb.d
          resources:
            requests: { cpu: "100m", memory: "256Mi" }
            limits: { cpu: "500m", memory: "512Mi" }
          readinessProbe:
            exec: { command: ["pg_isready", "-U", "portfolio_user"] }
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            exec: { command: ["pg_isready", "-U", "portfolio_user"] }
            initialDelaySeconds: 20
            periodSeconds: 20
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: portfolio-db-pvc
        - name: db-init
          configMap:
            name: portfolio-db-init
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: portfolio
spec:
  type: ClusterIP
  selector:
    app: portfolio-db
  ports:
    - port: 5432
      targetPort: 5432
