k8s/manifests/04-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-frontend
  namespace: portfolio
  labels:
    app: portfolio-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portfolio-frontend
  template:
    metadata:
      labels:
        app: portfolio-frontend
    spec:
      containers:
        - name: frontend
          image: portfolio-frontend:latest
          imagePullPolicy: Never   # ajustar para IfNotPresent + registry real ao publicar
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet: { path: /, port: 80 }
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /, port: 80 }
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests: { cpu: "50m", memory: "64Mi" }
            limits: { cpu: "200m", memory: "128Mi" }
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: portfolio
spec:
  type: ClusterIP
  selector:
    app: portfolio-frontend
  ports:
    - port: 80
      targetPort: 80
